<?xml version="1.0"?>
<package format="2">
  <name>maze_bot_control</name>
  <version>0.0.0</version>
  <description>The maze_bot_control package</description>

  <maintainer email="jagadeeshanmsj@gmail.com">jaga-matrix</maintainer>
  <author email="jagadeeshanmsj@gmail.com">jaga-matrix</author>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
